--- a/desafios/desafio10/pacote-projeto-d010/estilo/style.css
+++ b/desafios/desafio10/pacote-projeto-d010/estilo/style.css
@@ -1,45 +1,140 @@
 @charset "UTF-8";
-header {
-    background-color: darkgreen;
-    color: white;
-}
-header > p {
-    margin: 25px;
-}
-header > h1 {
-    margin: -10px 200px 54px 400px;
-    padding-top: 50px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 47px;
-}
-nav > a {
-    text-decoration: none;
-    color: white;
-}
-body {
-    background-color: aquamarine;
-}
-main {
-    background-color: white;
-    height: 1000px;
-    width: 1000px;
-    margin: 0px auto 0px auto;
-    padding: 0px 10px 0px 10px;
-    box-shadow: 5px 1px 8px 2px black;
-}
-section > h1 {
-    font-family: 'android';
-    font-size: 45px;
-}
-section > h2 {
-    font-family: 'android';
-}
-section > img {
-    margin: 1px auto 1px auto;
-}
+
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
 @font-face {
     font-family: 'android';
     src: url(../fontes/idroid.otf) format('opentype');
     font-weight: normal;
-    font-style: normal;
+}
+
+:root {
+    --cor0: #c5ebd6;
+    --cor1: #83e1ac;
+    --cor2: #3ddc84;
+    --cor3: #2fa866;
+    --cor4: #1a5c37;
+    --cor5: #063d1e;
+
+    --fonte-padrao: Arial, Verdana, Helvetica, sans-serif;
+    --fonte-destaque: 'Bebas Neue', cursive;
+    --fonte-android: 'android', cursive;
+}
+
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
+body {
+    background-color: var(--cor0);
+    font-family: var(--fonte-padrao);
+}
+
+header {
+    background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
+    background-color: var(--cor4);
+    min-height: 150px;
+    text-align: center;
+    padding-top: 40px;
+}
+
+header > h1 {    
+    color: white;
+    font-family: var(--fonte-destaque);
+    margin-bottom: 20px;
+    font-size: 3em;
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.226);
+}
+
+header > p {
+    color: white;
+    font-family: var(--fonte-padrao);
+    font-size: 1.2em;
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.226);
+}
+
+nav {
+    background-color: var(--cor5);
+    padding: 10px;
+    box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.212);
+}
+
+nav > a {
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-weight: bold;
+    transition-duration: 0.5s;
+}
+
+nav > a:hover {
+    background-color: var(--cor3);
+    color: var(--cor5);
+}
+
+main {
+    min-width: 300px;
+    max-width: 1000px;
+    margin: auto;
+    margin-bottom: 30px;
+    padding: 20px;
+    background-color: white;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.438);
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+main h1 {
+    color: var(--cor5);
+    font-family: var(--fonte-android);
+}
+
+main h2 {
+    color: var(--cor4);
+    font-family: var(--fonte-android);
+    font-size: 1.3em;
+    background-image: linear-gradient(to right, var(--cor1), transparent);
+    text-indent: 8px;
+}
+
+main p {
+    margin: 15px 0px;
+    text-align: justify;
+    text-indent: 30px;
+    line-height: 2em;
+    font-size: 1em;
+}
+
+main strong {
+    color: var(--cor4);
+    font-weight: bold;    
+}
+
+main a {
+    text-decoration: none;
+    color: var(--cor5);
+    background-color: var(--cor0);
+    padding: 2px 6px;
+}
+
+main a:hover {
+    text-decoration: underline;
+    color: var(--cor3);
+}
+
+main img {
+    width: 100%;
+}
+
+main img.pequena {
+    max-width: 350px;
+    display: block;
+    margin: auto;
+}
+
+footer {
+    background-color: var(--cor5);
+    color: white;
 }
