--- a/desafios/d012/style.css
+++ b/desafios/d012/style.css
@@ -47,6 +47,10 @@ section {
     font-size: 3.5vw;
 }
 
+section > p {
+    padding-bottom: 2em;
+}
+
 section.normal{
     background-color: white;
     color: black;
@@ -55,12 +59,26 @@ section.normal{
 section.imagem{
     background-color: rgb(51, 51, 51);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.473);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
     display: inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.247);
+    background-color: rgba(0, 0, 0, 0.514);
+    text-shadow: 1px 1px 0px black;    
+    
+}
+
+section#img01{
+    background-image: url('../d012/imagens/background001.jpg');
+    background-position: right center;
+}
+
+section#img02{
+    background-image: url('../d012/imagens/background002.jpg');
 }
 
 a {
